--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme 
+title: "Joel's AI Projects Portfolio"
+description: "A portfolio showcasing my AI-based models and project , including image generation, and various tech projects."
+google_analytics: UA-XXXXX-Y
